fix(switch): replace browser-specific margin (#5552)
We were relying on browser specific styles and it was broken in
webkit.

--- a/client/src/ui/atoms/switch/index.scss
+++ b/client/src/ui/atoms/switch/index.scss
@@ -5,9 +5,9 @@
 
   input {
     opacity: 0;
-    width: 0;
+    width: 2rem;
     height: 0;
-    margin-right: 1.5rem;
+    margin: 0;
 
     &:checked + .slider {
       &:before {
